# IHaskell

./: Procfile  README.md  app.json  instant-ihaskell.cabal
.halcyon/: constraints  extra-dependencies  extra-os-packages  pre-install-hook  sandbox-extra-apps  sandbox-extra-os-packages  sandbox-pre-build-hook  sandbox-sources
.halcyon/pre-install/: instant-ihaskell
.halcyon/sandbox-extra-apps-constraints/: cpphs-1.18.6.constraints
.halcyon/sandbox-gtk2hs-buildtools-0.13.0.3/: constraints
ihaskell/: ihaskell.cabal
