name:               instant-ihaskell
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20
stability:          experimental
homepage:           https://github.com/mietek/instant-ihaskell
extra-source-files: README.md
category:           Development
synopsis:           IHaskell packaged for easy installation
description:        <https://github.com/gibiansky/IHaskell IHaskell> packaged for easy installation.

executable IHaskell
  main-is:            Main.hs
  ghc-options:        -threaded
  default-language:   Haskell2010
  default-extensions: DoAndIfThenElse
  build-depends:      base                >= 4.6 && < 4.8,
                      ghc-paths            ==0.1.*,
                      aeson                >=0.6 && < 0.9,
                      bytestring           >=0.10,
                      cereal               >=0.3,
                      classy-prelude       >=0.9.2 && <0.11,
                      mono-traversable     >=0.6 && < 0.7,
                      containers           >=0.5,
                      directory            -any,
                      ghc                  ==7.6.* || == 7.8.*,
                      ihaskell             -any,
                      MissingH             >=1.2,
                      text                 -any,
                      ipython-kernel       >= 0.2,
                      unix                 >= 2.6,
                      ihaskell,
                      ihaskell-aeson,
                      ihaskell-basic,
                      ihaskell-blaze,
                      ihaskell-charts,
                      ihaskell-diagrams,
                      ihaskell-hatex,
                      ihaskell-juicypixels,
                      ihaskell-magic,
                      ihaskell-parsec,
                      ihaskell-rlangqq,
                      ihaskell-widgets
